--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,12 @@
     "description": "api for rifat",
     "autoload": {
         "psr-4": {
-            "Core\\Router\\": "core/",
-            "Core\\Core\\DataBase\\": "core/core/",
-            "Core\\Core\\IController\\": "core/core/",
-            "Core\\Controllers\\Comments\\": "core/controllers",
-            "Core\\Controllers\\Markers\\": "core/controllers"
+            "Api\\Router\\": "api/",
+            "Api\\Core\\DataBase\\": "api/core/",
+            "Api\\Core\\IController\\": "api/core/",
+            "Api\\Controllers\\Comments\\": "api/controllers/",
+            "Api\\Controllers\\Markers\\": "api/controllers/",
+            "Api\\Models\\Markers\\": "core/models/"
         }
     },
     "authors": [
